--- a/.github/workflows/docker-image-cd.yml
+++ b/.github/workflows/docker-image-cd.yml
@@ -1,8 +1,8 @@
-name: Docker Image CD Action
+name: Docker Image CD
 
 on:
   workflow_run:
-    workflows: ["Docker Image CI Action"]
+    workflows: ["Docker Image CI"]
     types:
       - completed
 
