--- a/.github/workflows/docker-image-cd.yml
+++ b/.github/workflows/docker-image-cd.yml
@@ -23,3 +23,16 @@ jobs:
 
     - name: Run Docker container
       run: sudo docker run -d -p 31230:5000 --name flask-template-endterm-container schaavk/flask-template-endterm
+
+    - name: Set up Kubernetes
+      run: |
+        minikube start
+        minikube update-context
+
+    - name: Deploy to Kubernetes
+      run: |
+        kubectl apply -f deployment.yaml
+        kubectl apply -f service.yaml
+  
+    - name: Check deployment
+      run: kubectl get all
