--- a/.github/workflows/docker-image-cd.yml
+++ b/.github/workflows/docker-image-cd.yml
@@ -1,14 +1,13 @@
 name: Docker Image CD
 
 on:
-  push:
-    branches:
-      - main
+  workflow_run:
+    workflows: ["Docker Image CI Action"]
+    types:
+      - completed
 
 jobs:
-
   build:
-
     runs-on: self-hosted
 
     steps:
@@ -19,10 +18,16 @@ jobs:
         minikube start
         minikube update-context
 
-    - name: Deploy to Kubernetes
+    - name: Deploy to NodePort
       run: |
-        minikube kubectl -- apply -f deployment.yaml
-        minikube kubectl -- apply -f service.yaml
-  
+        minikube kubectl -- create deployment flask-service-node --image=kicbase/echo-server:1.0
+        minikube kubectl -- expose deployment flask-service-node --type=NodePort --port=8080
+
     - name: Check deployment
-      run: minikube kubectl -- get all
+      run: minikube kubectl -- get services flask-service-node
+
+    - name: Deploy to LoadBalancer
+      run: |
+        kubectl create deployment flask-service-balanced --image=kicbase/echo-server:1.0
+        kubectl expose deployment flask-service-balanced --type=LoadBalancer --port=8080
+
