feat: add small changes

--- a/.github/workflows/docker-image-ci.yml
+++ b/.github/workflows/docker-image-ci.yml
@@ -18,10 +18,10 @@ jobs:
       run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
       
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-technopark-backend:latest
+      run: docker build . --file Dockerfile --tag flask-template-endterm:latest
     
     - name: Tag Repository
-      run: docker tag my-technopark-backend:latest schaavk/my-technopark-backend:latest
+      run: docker tag flask-template-endterm:latest schaavk/flask-template-endterm:latest
 
     - name: Push to Dockerhub
-      run: docker push schaavk/my-technopark-backend:latest
+      run: docker push schaavk/flask-template-endterm:latest
